RESOLVED FIXED47656
[GTK] Needs fixing mistyped comments in the API documentation
https://bugs.webkit.org/show_bug.cgi?id=47656
Summary [GTK] Needs fixing mistyped comments in the API documentation
Joone Hur
Reported 2010-10-13 23:48:01 PDT
There are mistyped comments in webkitwebsettings.cpp and webkitwebwindowfeatures.cpp
Attachments
Proposed Patch1 (2.06 KB, patch)
2010-10-14 00:35 PDT, Joone Hur
gustavo: review-
Proposed Patch2 (2.34 KB, patch)
2010-10-14 19:48 PDT, Joone Hur
no flags
Joone Hur
Comment 1 2010-10-14 00:35:09 PDT
Created attachment 70717 [details] Proposed Patch1
Gustavo Noronha (kov)
Comment 2 2010-10-14 07:21:47 PDT
Comment on attachment 70717 [details] Proposed Patch1 View in context: https://bugs.webkit.org/attachment.cgi?id=70717&action=review > WebKit/gtk/webkit/webkitwebsettings.cpp:49 > - * the to be used text encoding, color, font sizes, printing mode, > + * the behaviour to be used text encoding, color, font sizes, printing mode, This change looks wrong. The grammar is a bit weird the way it is now, but not sure it's wrong - would be good to have input from a native English speaker =D
Xan Lopez
Comment 3 2010-10-14 08:01:40 PDT
(In reply to comment #2) > This change looks wrong. The grammar is a bit weird the way it is now, but not sure it's wrong - would be good to have input from a native English speaker =D Looks wrong indeed. I'd just do s/the to be used/its/ in the original text. But I agree with having Martin just put there something ;)
Joone Hur
Comment 4 2010-10-14 08:26:31 PDT
(In reply to comment #2) > (From update of attachment 70717 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=70717&action=review > > > WebKit/gtk/webkit/webkitwebsettings.cpp:49 > > - * the to be used text encoding, color, font sizes, printing mode, > > + * the behaviour to be used text encoding, color, font sizes, printing mode, > > This change looks wrong. The grammar is a bit weird the way it is now, but not sure it's wrong - would be good to have input from a native English speaker =D How about this? #WebKitWebSettings can be applied to a #WebKitWebView to control the behaviour to be used, text encoding, color, font sizes, printing mode, script support, loading of images and various other things.
Martin Robinson
Comment 5 2010-10-14 08:38:55 PDT
Here's my suggestion: (old) WebKitWebSettings can be applied to a WebKitWebView to control the to be used text encoding, color, font sizes, printing mode, script support, loading of images and various other things. (new) WebKitWebSettings can be applied to a WebKitWebView to control text encoding, color, font sizes, printing mode, script support, loading of images and various other things. After creation, a WebKitWebSettings object contains default settings.
Joone Hur
Comment 6 2010-10-14 19:48:19 PDT
Created attachment 70822 [details] Proposed Patch2 Thanks, Martin. I applied your suggestion to the patch.
Martin Robinson
Comment 7 2010-10-14 22:44:41 PDT
Thanks!
WebKit Commit Bot
Comment 8 2010-10-19 01:17:33 PDT
Comment on attachment 70822 [details] Proposed Patch2 Clearing flags on attachment: 70822 Committed r70036: <http://trac.webkit.org/changeset/70036>
WebKit Commit Bot
Comment 9 2010-10-19 01:17:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.