2010-10-19  Joone Hur  <joone@kldp.org>

Reviewed by Martin Robinson.

        [GTK] Needs fixing mistyped comments in the API documentation
        https://bugs.webkit.org/show_bug.cgi?id=47656

        Fixed mistyped comments in the API documenentation.

        * webkit/webkitwebsettings.cpp: Fixed a mistyped comment in the the section block.
        * webkit/webkitwebwindowfeatures.cpp: Fixed a mistyped comment in the section block.

Canonical link: https://commits.webkit.org/60601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70036 268f45cc-cd09-0410-ab3c-d52691b4dbfc